--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "astro": "^5.14.1",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "sass": "^1.93.2"
   },
   "devDependencies": {
