--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
   "devDependencies": {
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
+    "postcss-html": "^1.8.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-astro": "0.14.1"
+    "prettier-plugin-astro": "0.14.1",
+    "stylelint": "^16.25.0",
+    "stylelint-config-standard": "^39.0.1",
+    "stylelint-config-standard-scss": "^16.0.0"
   },
   "lint-staged": {
-    "*.{js,ts,jsx,tsx,css,md,astro}": "prettier --write"
+    "*.{js,ts,jsx,tsx,css,md,astro}": "prettier --write",
+    "*.{css,scss,astro}": "stylelint --fix"
   },
   "packageManager": "pnpm@10.18.0+sha512.e804f889f1cecc40d572db084eec3e4881739f8dec69c0ff10d2d1beff9a4e309383ba27b5b750059d7f4c149535b6cd0d2cb1ed3aeb739239a4284a68f40cfa"
 }
