--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^8.46.1",
+    "eslint": "^9.37.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-perfectionist": "^4.15.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
     "postcss-html": "^1.8.0",
@@ -28,8 +32,16 @@
     "stylelint-config-standard-scss": "^16.0.0"
   },
   "lint-staged": {
-    "*.{js,ts,jsx,tsx,css,md,astro}": "prettier --write",
-    "*.{css,scss,astro}": "stylelint --fix"
+    "*.{js,ts,jsx,tsx,astro}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{css,md,scss}": [
+      "prettier --write"
+    ],
+    "*.{css,scss,astro}": [
+      "stylelint --fix"
+    ]
   },
   "packageManager": "pnpm@10.18.0+sha512.e804f889f1cecc40d572db084eec3e4881739f8dec69c0ff10d2d1beff9a4e309383ba27b5b750059d7f4c149535b6cd0d2cb1ed3aeb739239a4284a68f40cfa"
 }
