--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,7 +6,20 @@
   "rules": {
     "no-empty-source": null,
     "no-descending-specificity": null,
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": ["global"]
+      }
+    ],
+    "selector-type-no-unknown": [
+      true,
+      {
+        "ignore": ["custom-elements"],
+        "ignoreTypes": ["comment"]
+      }
+    ]
   },
   "overrides": [
     {
